dancexr/menu/2025.5/chat/voice.md
---
locale: en-rUS
layout: single
title: Voice
toc: false
sidebar:
  nav: "docs"
---
[Eng](/dancexr/menu/2025.5/chat/voice) | [繁中](/tw/dancexr/menu/2025.5/chat/voice) | [日本語](/jp/dancexr/menu/2025.5/chat/voice) | [한국어](/kr/dancexr/menu/2025.5/chat/voice) | [简中](/zh/dancexr/menu/2025.5/chat/voice)

[Chat Settings](../menu#Chat Settings) > Voice

## Configurations

| Setting | Value | Description |
| :--- | --- | :--- |
| > Speech Engine | **Built-in** | [None], Built-in,  |
| > System Voice | **[built-in]|3** | [built-in]|0, [built-in]|1, [built-in]|2, [built-in]|3, [built-in]|4, [built-in]|5, [built-in]|6, [built-in]|7, [built-in]|8, [built-in]|9, [built-in]|10, [built-in]|11, [built-in]|12, [built-in]|13, [built-in]|14, [built-in]|15, [built-in]|16, [built-in]|17, [built-in]|18, [built-in]|19, en-us-danny-low|0, en-us-kathleen-low|0, en_GB-semaine-medium|0, en_GB-semaine-medium|1, en_GB-semaine-medium|2, en_GB-semaine-medium|3, en_GB-southern_english_female-low|0, en_US-lessac-high|0, en_US-ryan-high|0, zh_CN-huayan-medium|0,  |
| ⊖ Dummy Read Speed | [15] (10 ~ 50) | 
| ☐ Spatialize | [OFF] | 
| ⊖ Audio 3D | [0] (0 ~ 1) | 
| ☑ Use Fallback | [ON] | 
| ☑ Read Player Input | [ON] | 
| ☐ Read Description | [OFF] | 
| <img src="/images/icon/ic_tune.png" alt="tune icon"/> **Voice Manager** | | 
| ├─> Voice | **[built-in]|0** | [built-in]|0, [built-in]|1, [built-in]|2, [built-in]|3, [built-in]|4, [built-in]|5, [built-in]|6, [built-in]|7, [built-in]|8, [built-in]|9, [built-in]|10, [built-in]|11, [built-in]|12, [built-in]|13, [built-in]|14, [built-in]|15, [built-in]|16, [built-in]|17, [built-in]|18, [built-in]|19, [built-in]|20, [built-in]|21, [built-in]|22, [built-in]|23, [built-in]|24, [built-in]|25, [built-in]|26, [built-in]|27, [built-in]|28, [built-in]|29, [built-in]|30, [built-in]|31, [built-in]|32, [built-in]|33, [built-in]|34, [built-in]|35, [built-in]|36, [built-in]|37, [built-in]|38, [built-in]|39, [built-in]|40, [built-in]|41, [built-in]|42, [built-in]|43, [built-in]|44, [built-in]|45, [built-in]|46, [built-in]|47, [built-in]|48, [built-in]|49, [built-in]|50, [built-in]|51, [built-in]|52, [built-in]|53, [built-in]|54, [built-in]|55, [built-in]|56, [built-in]|57, [built-in]|58, [built-in]|59, [built-in]|60, [built-in]|61, [built-in]|62, [built-in]|63, [built-in]|64, [built-in]|65, [built-in]|66, [built-in]|67, [built-in]|68, [built-in]|69, [built-in]|70, [built-in]|71, [built-in]|72, [built-in]|73, [built-in]|74, [built-in]|75, [built-in]|76, [built-in]|77, [built-in]|78, [built-in]|79, [built-in]|80, [built-in]|81, [built-in]|82, [built-in]|83, [built-in]|84, [built-in]|85, [built-in]|86, [built-in]|87, [built-in]|88, [built-in]|89, [built-in]|90, [built-in]|91, [built-in]|92, [built-in]|93, [built-in]|94, [built-in]|95, [built-in]|96, [built-in]|97, [built-in]|98, [built-in]|99, [built-in]|100, [built-in]|101, [built-in]|102, [built-in]|103, [built-in]|104, [built-in]|105, [built-in]|106, [built-in]|107, [built-in]|108, [built-in]|109, [built-in]|110, [built-in]|111, [built-in]|112, [built-in]|113, [built-in]|114, [built-in]|115, [built-in]|116, [built-in]|117, [built-in]|118, [built-in]|119, [built-in]|120, [built-in]|121, [built-in]|122, [built-in]|123, [built-in]|124, [built-in]|125, [built-in]|126, [built-in]|127, [built-in]|128, [built-in]|129, [built-in]|130, [built-in]|131, [built-in]|132, [built-in]|133, [built-in]|134, [built-in]|135, [built-in]|136, [built-in]|137, [built-in]|138, [built-in]|139, [built-in]|140, [built-in]|141, [built-in]|142, [built-in]|143, [built-in]|144, [built-in]|145, [built-in]|146, [built-in]|147, [built-in]|148, [built-in]|149, [built-in]|150, [built-in]|151, [built-in]|152, [built-in]|153, [built-in]|154, [built-in]|155, [built-in]|156, [built-in]|157, [built-in]|158, [built-in]|159, [built-in]|160, [built-in]|161, [built-in]|162, [built-in]|163, [built-in]|164, [built-in]|165, [built-in]|166, [built-in]|167, [built-in]|168, [built-in]|169, [built-in]|170, [built-in]|171, [built-in]|172, [built-in]|173, [built-in]|174, [built-in]|175, [built-in]|176, [built-in]|177, [built-in]|178, [built-in]|179, [built-in]|180, [built-in]|181, [built-in]|182, [built-in]|183, [built-in]|184, [built-in]|185, [built-in]|186, [built-in]|187, [built-in]|188, [built-in]|189, [built-in]|190, [built-in]|191, [built-in]|192, [built-in]|193, [built-in]|194, [built-in]|195, [built-in]|196, [built-in]|197, [built-in]|198, [built-in]|199, [built-in]|200, [built-in]|201, [built-in]|202, [built-in]|203, [built-in]|204, [built-in]|205, [built-in]|206, [built-in]|207, [built-in]|208, [built-in]|209, [built-in]|210, [built-in]|211, [built-in]|212, [built-in]|213, [built-in]|214, [built-in]|215, [built-in]|216, [built-in]|217, [built-in]|218, [built-in]|219, [built-in]|220, [built-in]|221, [built-in]|222, [built-in]|223, [built-in]|224, [built-in]|225, [built-in]|226, [built-in]|227, [built-in]|228, [built-in]|229, [built-in]|230, [built-in]|231, [built-in]|232, [built-in]|233, [built-in]|234, [built-in]|235, [built-in]|236, [built-in]|237, [built-in]|238, [built-in]|239, [built-in]|240, [built-in]|241, [built-in]|242, [built-in]|243, [built-in]|244, [built-in]|245, [built-in]|246, [built-in]|247, [built-in]|248, [built-in]|249, [built-in]|250, [built-in]|251, [built-in]|252, [built-in]|253, [built-in]|254, [built-in]|255, [built-in]|256, [built-in]|257, [built-in]|258, [built-in]|259, [built-in]|260, [built-in]|261, [built-in]|262, [built-in]|263, [built-in]|264, [built-in]|265, [built-in]|266, [built-in]|267, [built-in]|268, [built-in]|269, [built-in]|270, [built-in]|271, [built-in]|272, [built-in]|273, [built-in]|274, [built-in]|275, [built-in]|276, [built-in]|277, [built-in]|278, [built-in]|279, [built-in]|280, [built-in]|281, [built-in]|282, [built-in]|283, [built-in]|284, [built-in]|285, [built-in]|286, [built-in]|287, [built-in]|288, [built-in]|289, [built-in]|290, [built-in]|291, [built-in]|292, [built-in]|293, [built-in]|294, [built-in]|295, [built-in]|296, [built-in]|297, [built-in]|298, [built-in]|299, [built-in]|300, [built-in]|301, [built-in]|302, [built-in]|303, [built-in]|304, [built-in]|305, [built-in]|306, [built-in]|307, [built-in]|308, [built-in]|309, [built-in]|310, [built-in]|311, [built-in]|312, [built-in]|313, [built-in]|314, [built-in]|315, [built-in]|316, [built-in]|317, [built-in]|318, [built-in]|319, [built-in]|320, [built-in]|321, [built-in]|322, [built-in]|323, [built-in]|324, [built-in]|325, [built-in]|326, [built-in]|327, [built-in]|328, [built-in]|329, [built-in]|330, [built-in]|331, [built-in]|332, [built-in]|333, [built-in]|334, [built-in]|335, [built-in]|336, [built-in]|337, [built-in]|338, [built-in]|339, [built-in]|340, [built-in]|341, [built-in]|342, [built-in]|343, [built-in]|344, [built-in]|345, [built-in]|346, [built-in]|347, [built-in]|348, [built-in]|349, [built-in]|350, [built-in]|351, [built-in]|352, [built-in]|353, [built-in]|354, [built-in]|355, [built-in]|356, [built-in]|357, [built-in]|358, [built-in]|359, [built-in]|360, [built-in]|361, [built-in]|362, [built-in]|363, [built-in]|364, [built-in]|365, [built-in]|366, [built-in]|367, [built-in]|368, [built-in]|369, [built-in]|370, [built-in]|371, [built-in]|372, [built-in]|373, [built-in]|374, [built-in]|375, [built-in]|376, [built-in]|377, [built-in]|378, [built-in]|379, [built-in]|380, [built-in]|381, [built-in]|382, [built-in]|383, [built-in]|384, [built-in]|385, [built-in]|386, [built-in]|387, [built-in]|388, [built-in]|389, [built-in]|390, [built-in]|391, [built-in]|392, [built-in]|393, [built-in]|394, [built-in]|395, [built-in]|396, [built-in]|397, [built-in]|398, [built-in]|399, [built-in]|400, [built-in]|401, [built-in]|402, [built-in]|403, [built-in]|404, [built-in]|405, [built-in]|406, [built-in]|407, [built-in]|408, [built-in]|409, [built-in]|410, [built-in]|411, [built-in]|412, [built-in]|413, [built-in]|414, [built-in]|415, [built-in]|416, [built-in]|417, [built-in]|418, [built-in]|419, [built-in]|420, [built-in]|421, [built-in]|422, [built-in]|423, [built-in]|424, [built-in]|425, [built-in]|426, [built-in]|427, [built-in]|428, [built-in]|429, [built-in]|430, [built-in]|431, [built-in]|432, [built-in]|433, [built-in]|434, [built-in]|435, [built-in]|436, [built-in]|437, [built-in]|438, [built-in]|439, [built-in]|440, [built-in]|441, [built-in]|442, [built-in]|443, [built-in]|444, [built-in]|445, [built-in]|446, [built-in]|447, [built-in]|448, [built-in]|449, [built-in]|450, [built-in]|451, [built-in]|452, [built-in]|453, [built-in]|454, [built-in]|455, [built-in]|456, [built-in]|457, [built-in]|458, [built-in]|459, [built-in]|460, [built-in]|461, [built-in]|462, [built-in]|463, [built-in]|464, [built-in]|465, [built-in]|466, [built-in]|467, [built-in]|468, [built-in]|469, [built-in]|470, [built-in]|471, [built-in]|472, [built-in]|473, [built-in]|474, [built-in]|475, [built-in]|476, [built-in]|477, [built-in]|478, [built-in]|479, [built-in]|480, [built-in]|481, [built-in]|482, [built-in]|483, [built-in]|484, [built-in]|485, [built-in]|486, [built-in]|487, [built-in]|488, [built-in]|489, [built-in]|490, [built-in]|491, [built-in]|492, [built-in]|493, [built-in]|494, [built-in]|495, [built-in]|496, [built-in]|497, [built-in]|498, [built-in]|499, [built-in]|500, [built-in]|501, [built-in]|502, [built-in]|503, [built-in]|504, [built-in]|505, [built-in]|506, [built-in]|507, [built-in]|508, [built-in]|509, [built-in]|510, [built-in]|511, [built-in]|512, [built-in]|513, [built-in]|514, [built-in]|515, [built-in]|516, [built-in]|517, [built-in]|518, [built-in]|519, [built-in]|520, [built-in]|521, [built-in]|522, [built-in]|523, [built-in]|524, [built-in]|525, [built-in]|526, [built-in]|527, [built-in]|528, [built-in]|529, [built-in]|530, [built-in]|531, [built-in]|532, [built-in]|533, [built-in]|534, [built-in]|535, [built-in]|536, [built-in]|537, [built-in]|538, [built-in]|539, [built-in]|540, [built-in]|541, [built-in]|542, [built-in]|543, [built-in]|544, [built-in]|545, [built-in]|546, [built-in]|547, [built-in]|548, [built-in]|549, [built-in]|550, [built-in]|551, [built-in]|552, [built-in]|553, [built-in]|554, [built-in]|555, [built-in]|556, [built-in]|557, [built-in]|558, [built-in]|559, [built-in]|560, [built-in]|561, [built-in]|562, [built-in]|563, [built-in]|564, [built-in]|565, [built-in]|566, [built-in]|567, [built-in]|568, [built-in]|569, [built-in]|570, [built-in]|571, [built-in]|572, [built-in]|573, [built-in]|574, [built-in]|575, [built-in]|576, [built-in]|577, [built-in]|578, [built-in]|579, [built-in]|580, [built-in]|581, [built-in]|582, [built-in]|583, [built-in]|584, [built-in]|585, [built-in]|586, [built-in]|587, [built-in]|588, [built-in]|589, [built-in]|590, [built-in]|591, [built-in]|592, [built-in]|593, [built-in]|594, [built-in]|595, [built-in]|596, [built-in]|597, [built-in]|598, [built-in]|599, [built-in]|600, [built-in]|601, [built-in]|602, [built-in]|603, [built-in]|604, [built-in]|605, [built-in]|606, [built-in]|607, [built-in]|608, [built-in]|609, [built-in]|610, [built-in]|611, [built-in]|612, [built-in]|613, [built-in]|614, [built-in]|615, [built-in]|616, [built-in]|617, [built-in]|618, [built-in]|619, [built-in]|620, [built-in]|621, [built-in]|622, [built-in]|623, [built-in]|624, [built-in]|625, [built-in]|626, [built-in]|627, [built-in]|628, [built-in]|629, [built-in]|630, [built-in]|631, [built-in]|632, [built-in]|633, [built-in]|634, [built-in]|635, [built-in]|636, [built-in]|637, [built-in]|638, [built-in]|639, [built-in]|640, [built-in]|641, [built-in]|642, [built-in]|643, [built-in]|644, [built-in]|645, [built-in]|646, [built-in]|647, [built-in]|648, [built-in]|649, [built-in]|650, [built-in]|651, [built-in]|652, [built-in]|653, [built-in]|654, [built-in]|655, [built-in]|656, [built-in]|657, [built-in]|658, [built-in]|659, [built-in]|660, [built-in]|661, [built-in]|662, [built-in]|663, [built-in]|664, [built-in]|665, [built-in]|666, [built-in]|667, [built-in]|668, [built-in]|669, [built-in]|670, [built-in]|671, [built-in]|672, [built-in]|673, [built-in]|674, [built-in]|675, [built-in]|676, [built-in]|677, [built-in]|678, [built-in]|679, [built-in]|680, [built-in]|681, [built-in]|682, [built-in]|683, [built-in]|684, [built-in]|685, [built-in]|686, [built-in]|687, [built-in]|688, [built-in]|689, [built-in]|690, [built-in]|691, [built-in]|692, [built-in]|693, [built-in]|694, [built-in]|695, [built-in]|696, [built-in]|697, [built-in]|698, [built-in]|699, [built-in]|700, [built-in]|701, [built-in]|702, [built-in]|703, [built-in]|704, [built-in]|705, [built-in]|706, [built-in]|707, [built-in]|708, [built-in]|709, [built-in]|710, [built-in]|711, [built-in]|712, [built-in]|713, [built-in]|714, [built-in]|715, [built-in]|716, [built-in]|717, [built-in]|718, [built-in]|719, [built-in]|720, [built-in]|721, [built-in]|722, [built-in]|723, [built-in]|724, [built-in]|725, [built-in]|726, [built-in]|727, [built-in]|728, [built-in]|729, [built-in]|730, [built-in]|731, [built-in]|732, [built-in]|733, [built-in]|734, [built-in]|735, [built-in]|736, [built-in]|737, [built-in]|738, [built-in]|739, [built-in]|740, [built-in]|741, [built-in]|742, [built-in]|743, [built-in]|744, [built-in]|745, [built-in]|746, [built-in]|747, [built-in]|748, [built-in]|749, [built-in]|750, [built-in]|751, [built-in]|752, [built-in]|753, [built-in]|754, [built-in]|755, [built-in]|756, [built-in]|757, [built-in]|758, [built-in]|759, [built-in]|760, [built-in]|761, [built-in]|762, [built-in]|763, [built-in]|764, [built-in]|765, [built-in]|766, [built-in]|767, [built-in]|768, [built-in]|769, [built-in]|770, [built-in]|771, [built-in]|772, [built-in]|773, [built-in]|774, [built-in]|775, [built-in]|776, [built-in]|777, [built-in]|778, [built-in]|779, [built-in]|780, [built-in]|781, [built-in]|782, [built-in]|783, [built-in]|784, [built-in]|785, [built-in]|786, [built-in]|787, [built-in]|788, [built-in]|789, [built-in]|790, [built-in]|791, [built-in]|792, [built-in]|793, [built-in]|794, [built-in]|795, [built-in]|796, [built-in]|797, [built-in]|798, [built-in]|799, [built-in]|800, [built-in]|801, [built-in]|802, [built-in]|803, [built-in]|804, [built-in]|805, [built-in]|806, [built-in]|807, [built-in]|808, [built-in]|809, [built-in]|810, [built-in]|811, [built-in]|812, [built-in]|813, [built-in]|814, [built-in]|815, [built-in]|816, [built-in]|817, [built-in]|818, [built-in]|819, [built-in]|820, [built-in]|821, [built-in]|822, [built-in]|823, [built-in]|824, [built-in]|825, [built-in]|826, [built-in]|827, [built-in]|828, [built-in]|829, [built-in]|830, [built-in]|831, [built-in]|832, [built-in]|833, [built-in]|834, [built-in]|835, [built-in]|836, [built-in]|837, [built-in]|838, [built-in]|839, [built-in]|840, [built-in]|841, [built-in]|842, [built-in]|843, [built-in]|844, [built-in]|845, [built-in]|846, [built-in]|847, [built-in]|848, [built-in]|849, [built-in]|850, [built-in]|851, [built-in]|852, [built-in]|853, [built-in]|854, [built-in]|855, [built-in]|856, [built-in]|857, [built-in]|858, [built-in]|859, [built-in]|860, [built-in]|861, [built-in]|862, [built-in]|863, [built-in]|864, [built-in]|865, [built-in]|866, [built-in]|867, [built-in]|868, [built-in]|869, [built-in]|870, [built-in]|871, [built-in]|872, [built-in]|873, [built-in]|874, [built-in]|875, [built-in]|876, [built-in]|877, [built-in]|878, [built-in]|879, [built-in]|880, [built-in]|881, [built-in]|882, [built-in]|883, [built-in]|884, [built-in]|885, [built-in]|886, [built-in]|887, [built-in]|888, [built-in]|889, [built-in]|890, [built-in]|891, [built-in]|892, [built-in]|893, [built-in]|894, [built-in]|895, [built-in]|896, [built-in]|897, [built-in]|898, [built-in]|899, [built-in]|900, [built-in]|901, [built-in]|902, [built-in]|903, en-us-danny-low|0, en-us-kathleen-low|0, en_GB-semaine-medium|0, en_GB-semaine-medium|1, en_GB-semaine-medium|2, en_GB-semaine-medium|3, en_GB-southern_english_female-low|0, en_US-lessac-high|0, en_US-ryan-high|0, zh_CN-huayan-medium|0,  |
| ├─☐ Selected | [OFF] | 
| ├─☑ Gender | Unknown | Unknown, Male, Female, 
| ├─⊖ Rating | [0] (0 ~ 10) | 
| ├─ Preview || 
| └─ Save Changes || 
